// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard and Grading NavLinks render for Role.Staff 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/academy/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks render for Role.Admin 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/academy/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/academy/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
    <NavLink to=\\"/academy/adminpanel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"settings\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Admin Panel
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;
